# walrus

./: .editorconfig  .gitignore  .licensesnip  .licensesnipignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .rustfmt.toml  .taplo.toml  .tarpaulin.toml  .yamlfmt.yml  404.html  CONTRIBUTING.md  Cargo.toml  README.md  _typos.toml  binary-build-list.json  book.toml  config.yaml  deny.toml  diesel.toml  glossary.html  index.html  print.html  rust-toolchain.toml  searchindex.js  searchindex.json  service_config_template.yml
.config/: nextest.toml
crates/checkpoint-downloader/: Cargo.toml
crates/checkpoint-downloader/src/: config.rs  downloader.rs  lib.rs  metrics.rs  types.rs
crates/typed-store/: Cargo.toml
crates/typed-store-derive/: Cargo.toml
crates/typed-store-derive/src/: lib.rs
crates/typed-store/src/: lib.rs  metrics.rs  rocks.rs  traits.rs
crates/typed-store/src/rocks/: errors.rs  safe_iter.rs  tests.rs
crates/typed-store/tests/: macro_tests.rs
crates/walrus-core/: Cargo.toml
crates/walrus-core/benches/: basic_encoding.rs  blob_encoding.rs
crates/walrus-core/benches/constants/: mod.rs
crates/walrus-core/src/: bft.rs  by_axis.rs  encoding.rs  inconsistency.rs  keys.rs  lib.rs  merkle.rs  messages.rs  metadata.rs  test_utils.rs  utils.rs
crates/walrus-core/src/encoding/: basic_encoding.rs  blob_encoding.rs  common.rs  config.rs  errors.rs  mapping.rs  quilt_encoding.rs  slivers.rs  symbols.rs  utils.rs
crates/walrus-core/src/messages/: certificate.rs  invalid_blob_id.rs  proof_of_possession.rs  storage_confirmation.rs  sync_shard.rs
crates/walrus-e2e-tests/: Cargo.toml
crates/walrus-e2e-tests/src/: lib.rs
crates/walrus-e2e-tests/tests/: test_client.rs  test_event_blobs.rs  test_publish_package.rs
crates/walrus-event/: Cargo.toml
crates/walrus-event/src/: blob_writer.rs  checkpoint_downloader.rs  checkpoint_processor.rs  event_blob.rs  event_processor.rs  lib.rs
crates/walrus-orchestrator/: Cargo.toml  readme.md
crates/walrus-orchestrator/assets/: dashboard-template.json  settings-template.yaml
crates/walrus-orchestrator/src/: benchmark.rs  client.rs  display.rs  error.rs  faults.rs  logs.rs  main.rs  measurements.rs  monitor.rs  orchestrator.rs  protocol.rs  settings.rs  ssh.rs  testbed.rs
crates/walrus-orchestrator/src/client/: aws.rs  vultr.rs
crates/walrus-orchestrator/src/protocol/: target.rs
crates/walrus-proc-macros/: Cargo.toml
crates/walrus-proc-macros/src/: derive_api_errors.rs  lib.rs  walrus_simtest.rs
crates/walrus-proxy/: Cargo.toml
crates/walrus-proxy/src/: admin.rs  config.rs  consumer.rs  handlers.rs  histogram_relay.rs  lib.rs  main.rs  metrics.rs  middleware.rs  prom_to_mimir.rs  providers.rs  remote_write.rs
crates/walrus-proxy/src/fixtures/: allowlist.yaml  config.yaml
crates/walrus-proxy/src/providers/: mod.rs  walrus.rs
crates/walrus-rest-client/: Cargo.toml
crates/walrus-rest-client/src/: client.rs  error.rs  lib.rs  node_response.rs  tls.rs
crates/walrus-rest-client/src/api/: errors.rs
crates/walrus-rest-client/src/client/: middleware.rs
crates/walrus-sdk/: Cargo.toml  client_config_example.yaml
crates/walrus-sdk/src/: active_committees.rs  api.rs  blocklist.rs  client.rs  config.rs  error.rs  lib.rs  node_response.rs  store_optimizations.rs  store_when.rs  tls.rs  upload_relay.rs  utils.rs
crates/walrus-sdk/src/api/: errors.rs
crates/walrus-sdk/src/client/: builder.rs  client_types.rs  communication.rs  metrics.rs  middleware.rs  quilt_client.rs  refresh.rs  resource.rs  responses.rs  store_args.rs  upload_relay_client.rs
crates/walrus-sdk/src/config/: committees_refresh_config.rs  communication_config.rs  reqwest_config.rs  sliver_write_extra_time.rs
crates/walrus-sdk/src/upload_relay/: params.rs  tip_config.rs
crates/walrus-service/: Cargo.toml  aggregator_openapi.html  aggregator_openapi.yaml  build.rs  client_config_example.yaml  daemon_openapi.html  daemon_openapi.yaml  example-client-config.yaml  example-client-config.yml  example-local-config.yml  node_config_example.yaml  publisher_openapi.html  publisher_openapi.yaml  storage_openapi.html  storage_openapi.yaml
crates/walrus-service/migrations/2025-01-20-173100_create_stream_events/: down.sql  up.sql
crates/walrus-service/migrations/2025-02-24-213538_add-gc-field/: down.sql  up.sql
crates/walrus-service/src/: aggregator.rs  api.rs  backup.rs  cli_utils.rs  client.rs  committee.rs  common.rs  config.rs  contract_service.rs  crypto.rs  daemon.rs  encoding.rs  event.rs  lib.rs  mapping.rs  move_client.rs  node.rs  server.rs  storage.rs  system_events.rs  telemetry.rs  test_cluster.rs  test_utils.rs  testbed.rs  utils.rs
crates/walrus-service/src/backup/: config.rs  garbage_collector.rs  metrics.rs  models.rs  schema.rs  service.rs
crates/walrus-service/src/cli_utils/: cli_output.rs
crates/walrus-service/tests/: epoch_change.rs  test_client.rs
crates/walrus-simtest/: Cargo.toml  README.md
crates/walrus-simtest/src/: lib.rs  test_utils.rs
crates/walrus-simtest/tests/: simtest.rs  simtest_event_blob.rs  simtest_failure.rs  simtest_param_sync.rs
crates/walrus-stress/: Cargo.toml
crates/walrus-stress/src/: generator.rs  lib.rs  main.rs  metrics.rs  refill.rs  single_client_workload.rs
crates/walrus-sui/: Cargo.toml  build.rs
crates/walrus-sui/benches/: gas_cost_bench.rs
crates/walrus-sui/src/: client.rs  config.rs  contracts.rs  lib.rs  system_setup.rs  test_utils.rs  types.rs  utils.rs  wallet.rs
crates/walrus-sui/tests/: test_publish_package.rs  test_register_blob.rs  test_walrus_sui.rs
crates/walrus-test-utils/: Cargo.toml
crates/walrus-test-utils/src/: lib.rs
crates/walrus-upload-relay/: Cargo.toml  README.md  upload_relay_openapi.html  upload_relay_openapi.yaml  walrus_upload_relay_config_example.yaml
crates/walrus-upload-relay/src/: controller.rs  error.rs  main.rs  metrics.rs  params.rs  shared.rs  tip.rs  utils.rs
crates/walrus-utils/: Cargo.toml
crates/walrus-utils/src/: backoff.rs  checkpoint_downloader.rs  config.rs  http.rs  lib.rs  metrics.rs  tracing_sampled.rs
(+538 files in other folders)
