[package]
name = "walrus-core"
publish = false
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
bcs = { workspace = true }
fastcrypto = { workspace = true }
rand = { workspace = true, optional = true }
raptorq = "2.0.0"
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
criterion = "0.5.1"
walrus-test-utils = { workspace = true }

[features]
test-utils = ["rand"]

[[bench]]
name = "basic_encoding"
harness = false
