[package]
name = "walrus-core"
publish = false
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
bcs = { workspace = true }
fastcrypto = { workspace = true }
rand = { workspace = true }
raptorq = "2.0.0"
serde = { workspace = true }
serde_with = { workspace = true, features = ["base64"] }
thiserror = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
anyhow = { workspace = true }
criterion = "0.5.1"
serde_test = "1.0.176"
walrus-test-utils = { workspace = true }

[features]
test-utils = []

[lib]
bench = false

[[bench]]
name = "basic_encoding"
harness = false

[[bench]]
name = "blob_encoding"
harness = false
