[package]
name = "walrus-core"
publish = false
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
sui-types = ["dep:sui-types"]
test-utils = ["walrus-test-utils"]

[dependencies]
base64.workspace = true
bcs.workspace = true
enum_dispatch = { workspace = true }
fastcrypto.workspace = true
hex.workspace = true
p256 = { workspace = true, features = ["pem", "pkcs8"] }
rand.workspace = true
reed-solomon-simd.workspace = true
serde.workspace = true
serde_with.workspace = true
sui-types = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true
utoipa = { workspace = true, optional = true }
walrus-test-utils = { workspace = true, optional = true }

[dev-dependencies]
anyhow.workspace = true
criterion.workspace = true
serde_test.workspace = true
tracing-subscriber.workspace = true
walrus-test-utils.workspace = true

[lints]
workspace = true

[lib]
bench = false

[[bench]]
name = "basic_encoding"
harness = false

[[bench]]
name = "blob_encoding"
harness = false
