[package]
name = "walrus-e2e-tests"
publish = false
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dev-dependencies]
anyhow.workspace = true
prometheus.workspace = true
# explicitly import reqwest in test to disable its system proxy cache. It causes indeterminism in simtest.
reqwest = { version = "0.12.9", default-features = false, features = ["__internal_proxy_sys_no_cache", "http2", "json", "rustls-tls"] }
sui-macros.workspace = true
sui-protocol-config.workspace = true
sui-simulator.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walrus-core.workspace = true
walrus-proc-macros.workspace = true
walrus-sdk.workspace = true
walrus-service = { workspace = true, features = ["test-utils"] }
walrus-sui.workspace = true
walrus-test-utils.workspace = true

[lints]
workspace = true
