[package]
name = "walrus-e2e-tests"
publish = false
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dev-dependencies]
anyhow.workspace = true
prometheus.workspace = true
rand.workspace = true
# explicitly import reqwest in test to disable its system proxy cache. It causes indeterminism in simtest.
futures.workspace = true
hex.workspace = true
indicatif.workspace = true
reqwest = { version = "0.12.12", default-features = false, features = ["__internal_proxy_sys_no_cache", "http2", "json", "rustls-tls"] }
serde_yaml.workspace = true
sui-macros.workspace = true
sui-protocol-config.workspace = true
sui-simulator.workspace = true
sui-types.workspace = true
telemetry-subscribers.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walrus-core.workspace = true
walrus-proc-macros = { workspace = true, features = ["walrus-simtest"] }
walrus-sdk = { workspace = true, features = ["test-utils"] }
walrus-service = { workspace = true, features = ["test-utils"] }
walrus-storage-node-client.workspace = true
walrus-sui.workspace = true
walrus-test-utils.workspace = true
walrus-utils.workspace = true

[lints]
workspace = true
