[package]
name = "walrus-event"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bcs.workspace = true
byteorder.workspace = true
futures-util.workspace = true
integer-encoding.workspace = true
move-core-types.workspace = true
reqwest.workspace = true
rocksdb.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
sui-config.workspace = true
sui-package-resolver.workspace = true
sui-rest-api.workspace = true
sui-sdk.workspace = true
sui-storage.workspace = true
sui-types = { workspace = true, features = ["test-utils"] }
tempfile = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-util.workspace = true
typed-store.workspace = true
url.workspace = true
walrus-core.workspace = true
walrus-sdk.workspace = true
walrus-sui.workspace = true

[features]
default = ["test-utils"]
test-utils = ["dep:tempfile"]
