[package]
name = "walrus-orchestrator"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aws-config = "1.5.10"
aws-runtime = "1.5.4"
aws-sdk-ec2 = "1.107.0"
clap.workspace = true
color-eyre = "0.6.3"
crossterm = "0.28.1"
eyre = "0.6.12"
futures.workspace = true
prettytable.workspace = true
# TODO(alberto): Remove this dependency again (#284).
prometheus-parse = { git = "https://github.com/asonnino/prometheus-parser", rev = "75334db" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
ssh2 = "0.9.5"
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
walrus-core.workspace = true
walrus-service = { workspace = true, features = ["deploy", "node"] }
walrus-sui.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true

[[bin]]
name = "walrus-orchestrator"
path = "src/main.rs"
