[package]
name = "walrus-proc-macros"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
derive-api-errors = [
  "dep:darling",
  "dep:proc-macro2",
]
walrus-simtest = [
  "dep:sui-macros",
]

[dependencies]
darling = { version = "0.20.11", optional = true }
proc-macro2 = { version = "1.0.95", optional = true }
quote.workspace = true
sui-macros = { workspace = true, optional = true }
syn.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true
