[package]
name = "walrus-sdk"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
test-utils = [
  "dep:tempfile",
]

[dependencies]
anyhow.workspace = true
bimap.workspace = true
chrono.workspace = true
enum_dispatch.workspace = true
fastcrypto.workspace = true
futures.workspace = true
home.workspace = true
humantime.workspace = true
indexmap.workspace = true
indicatif.workspace = true
indoc.workspace = true
itertools.workspace = true
jsonwebtoken.workspace = true
pin-project.workspace = true
prometheus.workspace = true
rand.workspace = true
rayon.workspace = true
reqwest.workspace = true
rustls.workspace = true
rustls-native-certs.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
sui-sdk.workspace = true
sui-types.workspace = true
tempfile = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
utoipa.workspace = true
walrus-core = { workspace = true, features = ["sui-types", "utoipa"] }
walrus-storage-node-client.workspace = true
walrus-sui = { workspace = true, features = ["utoipa"] }
walrus-test-utils.workspace = true
walrus-utils = { workspace = true, features = ["log", "metrics"] }

[lints]
workspace = true
